# pdf_dewatermark

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_gui.bat
docs/: 01-现状与能力.md  02-架构设计.md  03-效果优化方案.md  04-打包与分发.md  05-实施路线.md  06-产品与图标.md  07-GUI开发说明.md
legacy/: pdf去除正文水印3.py  pdf页眉页脚加矩形.py  计算图片宽高.py
legacy/灰阶去水印/: 01 彩色PDF转灰色PDF.py  02 色阶去水印.py  readme.txt
packaging/: gui_entry.py  jingye_setup.iss  make_release_zip.py  pdf_dewatermark_gui.spec  user_README.txt  write_dist_meta.py
scripts/: _write_ps1_utf8.py  build_gui_onedir.ps1  build_installer.ps1  dev_setup.ps1  open_source_init.ps1  release.ps1
src/pdf_dewatermark/: __init__.py  __main__.py  cli.py  models.py  paths.py  processor.py
src/pdf_dewatermark/core/: __init__.py  colors.py  fill.py  grayscale.py  mask.py  page_ranges.py  region.py  remove.py
src/pdf_dewatermark/gui/: __init__.py  app.py  branding.py  icons.py  main_window.py  theme.py  workers.py
src/pdf_dewatermark/gui/pages/: batch_page.py  grayscale_page.py  pipeline_page.py  region_page.py  remove_page.py
src/pdf_dewatermark/gui/state/: prefs.py
src/pdf_dewatermark/gui/widgets/: apply_regions_dialog.py  continuous_view.py  empty_state.py  log_panel.py  params_panel.py  pdf_canvas.py  toolbar_chrome.py
src/pdf_dewatermark/pdf/: __init__.py  document.py  export.py  render.py
tests/: test_core_remove.py  test_export_dpi.py  test_page_ranges.py  test_pipeline.py  test_region_vector.py
